infrastructure/kubernetes/haproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-service
  labels:
    app: haproxy
spec:
  type: LoadBalancer  # Ou NodePort pour Minikube
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  - port: 8404
    targetPort: 8404
    protocol: TCP
    name: stats
  selector:
    app: haproxy
